[package]
edition = "2024"
name = "online-breakout"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
async-broadcast = "0.7.2"
bevy = "0.16.0"
bevy-tokio-tasks = "0.16.0"
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs" }
clap = { version = "4.5.38", features = ["derive"] }
futures = "0.3.31"
iroh = "0.34.1"
iroh-gossip = { version = "0.34.1", features = ["net"] }
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", features = [
  "ggrs",
] }
n0-future = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.0"
uuid = { version = "1.16.0", features = ["v4"] }

[patch.crates-io]
ggrs = { git = "https://github.com/gschup/ggrs" }
