[package]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "online-breakout"
readme = "README.md"
repository = "https://github.com/yadokani389/online-breakout"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
async-broadcast = "0.7.2"
bevy = "0.16.0"
bevy_egui = "0.34.1"
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs", features = [
  "wasm-bindgen",
] }
clap = { version = "4.5.38", features = ["derive"] }
futures = "0.3.31"
iroh = { version = "0.34.1", default-features = false }
iroh-gossip = { version = "0.34.1", default-features = false, features = [
  "net",
] }
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", features = [
  "ggrs",
] }
n0-future = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.0"
uuid = { version = "1.16.0", features = ["v4", "rng-getrandom"] }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy-wasm-tasks = { git = "https://github.com/yadokani389/bevy-wasm-tasks", features = [
  "tokio",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy-wasm-tasks = { git = "https://github.com/yadokani389/bevy-wasm-tasks", features = [
  "wasm",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
web-sys = { version = "0.3", features = ["Window", "Location"] }

[patch.crates-io]
ggrs = { git = "https://github.com/gschup/ggrs" }
